kyverno/policies/serviceaccounts/test/test-vault-annotation.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-no-annotation
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-invalid-annotation
  annotations:
    vault.uw.systems/aws-role: "blah"
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-valid-annotation
  annotations:
    vault.uw.systems/aws-role: "arn:aws:iam::950135041896:role/sys-test"
