kyverno/policies/serviceaccounts/test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-service-accounts-policies
spec:
  steps:
    - name: apply-policies
      try:
        - apply:
            file: ../vault-annotation.yaml

        - assert:
            timeout: 30s
            resource:
              apiVersion: kyverno.io/v1
              kind: ClusterPolicy
              metadata:
                name: vault-aws-role-arn
              status:
                conditions:
                  - reason: Succeeded
                    status: "True"
                    type: Ready

    - name: test-vault-annotation
      try:
        - apply:
            file: test-vault-annotation.yaml
            expect:
              - match:
                  apiVersion: v1
                  kind: ServiceAccount
                  metadata:
                    name: test-invalid-annotation
                check:
                  ($error != null): true
                  "(contains(to_string($error), 'The annotation `vault.uw.systems/aws-role` must contain a valid role arn'))": true
