kyverno/policies/serviceaccounts/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers
policies:
  - ../vault-annotation.yaml
resources:
  - test-vault-annotation.yaml
results:
  # Test vault annotation on service accounts
  - policy: vault-aws-role-arn
    rule: default
    resources: ["test-no-annotation"]
    kind: ServiceAccount
    result: skip
  - policy: vault-aws-role-arn
    rule: default
    resources: ["test-invalid-annotation"]
    kind: ServiceAccount
    result: fail
  - policy: vault-aws-role-arn
    rule: default
    resources: ["test-valid-annotation"]
    kind: ServiceAccount
    result: pass
